[tool.poetry]
name = "docker-dev"
version = "0.1.0"
description = ""
authors = ["Muhammad Sareini <mhsareini@gmail.com>"]
readme = "README.md"
packages = [{include = "docker_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
docker = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
